# RouteGuard

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml
awg-deps/: README.md
crates/routeguard-awg/: Cargo.toml
crates/routeguard-awg/src/: conf.rs  lib.rs  params.rs  validate.rs
crates/routeguard-cli/: Cargo.toml
crates/routeguard-cli/src/: main.rs
crates/routeguard-core/: Cargo.toml
crates/routeguard-core/src/: backend.rs  config.rs  error.rs  events.rs  ipc.rs  lib.rs  orchestrator.rs  pipe_security.rs  policy.rs  profile.rs  tunnel.rs
crates/routeguard-core/src/observability/: health.rs  metrics.rs  mod.rs
crates/routeguard-core/src/transport/: conf.rs  mod.rs
crates/routeguard-gui/: Cargo.toml
crates/routeguard-gui/src/: main.rs
crates/routeguard-lwo/: Cargo.toml
crates/routeguard-lwo/src/: backend.rs  keys.rs  lib.rs  relay.rs  session.rs  wire.rs
crates/routeguard-phantun/: Cargo.toml
crates/routeguard-phantun/src/: backend.rs  lib.rs  supervisor.rs
crates/routeguard-platform/: Cargo.toml  build.rs
crates/routeguard-platform/src/: dns.rs  integrity.rs  lib.rs  netif.rs  process.rs  routes.rs  tunnel.rs
crates/routeguard-platform/src/awg/: mod.rs
crates/routeguard-platform/src/transport/: direct_udp.rs  mod.rs
crates/routeguard-platform/src/wgnt/: adapter.rs  bindings.rs  config.rs  error.rs  ffi.rs  mod.rs  state.rs  statistics.rs
crates/routeguard-platform/tests/: split_tunnel_integration.rs  wgnt_integration.rs
crates/routeguard-platform/tests/fixtures/: minimal.conf
crates/routeguard-routing/: Cargo.toml
crates/routeguard-routing/src/: app.rs  dns.rs  domain.rs  domain_policy.rs  domain_store.rs  engine.rs  ip.rs  lib.rs  policy.rs  rules.rs  rules_ops.rs  split_policy.rs
crates/routeguard-service/: Cargo.toml
crates/routeguard-service/src/: backend_selector.rs  connect_session.rs  domain_routing.rs  event_bridge.rs  handler.rs  main.rs  profile_store.rs  service.rs  transport_health.rs  transport_selector.rs
crates/routeguard-service/src/observability/: collectors.rs  export.rs  logs.rs  mod.rs  publisher.rs  state.rs  store.rs
crates/routeguard-wfp/: Cargo.toml
crates/routeguard-wfp/src/: app_filter.rs  app_id.rs  dns_callout.rs  dns_callout_ioctl.rs  dns_callout_wfp.rs  domain_redirect.rs  engine.rs  filters.rs  ip_mask.rs  lib.rs  network_lock.rs  persistent.rs  policy.rs  recovery.rs  split_tunnel.rs
crates/routeguard-wfp/tests/: dns_callout.rs
docs/: ARCHITECTURE.md  AWG_BACKEND.md  DOMAIN_ROUTING.md  LWO_TRANSPORT.md  ROADMAP.md  SPLIT_TUNNEL.md  SPLIT_TUNNEL_SECURITY.md  TRANSPORT_LAYER.md  WGNT_GAP_ANALYSIS.md
drivers/routeguard-callout/: README.md  SIGNING.md  routeguard-callout.inf
drivers/routeguard-callout/include/: rg_callout_guids.h  rg_callout_ioctl.h
drivers/routeguard-callout/src/: callout_connect_redirect_v4.c  callout_connect_redirect_v6.c  callout_datagram_v4.c  callout_datagram_v6.c  callout_register.c  config.c  device.c  driver.c  rg_callout_internal.h
fuzz/: Cargo.toml  README.md
fuzz/corpus/wg/: minimal.conf
fuzz/fuzz_targets/: fuzz_awg_conf.rs  fuzz_diagnostics_params.rs  fuzz_ipc_request.rs  fuzz_lwo_conf.rs  fuzz_lwo_wire.rs  fuzz_wg_conf.rs
phantun-deps/: README.md
tests/scripts/: awg_connect_matrix.ps1  dns_redirect_matrix.ps1  lwo_connect_matrix.ps1  transport_connect_matrix.ps1
wireguard-deps/: README.md
