[package]
name = "routeguard-cli"
description = "RouteGuard command-line client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "routeguard-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
routeguard-core.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
