[package]
name = "routeguard-phantun"
description = "Phantun UDP-over-TCP transport traits for RouteGuard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
routeguard-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
