[package]
name = "routeguard-routing"
description = "RouteGuard routing engine — app, IP, and domain rules"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ipnet.workspace = true
routeguard-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
