[package]
name = "routeguard-wfp"
description = "RouteGuard Windows Filtering Platform network lock and app filters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ipnet.workspace = true
routeguard-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-wfp.workspace = true
windows-sys.workspace = true

[dev-dependencies]
